# DIVINA-Classifier

./: .gitignore  README.md  pyproject.toml
src/: dataset.ipynb  main.py
src/divina_classifier/: __init__.py  __main__.py
src/divina_classifier/models/: vgg16.py
src/models/: resnet.py
src/utils/: image_processing.py
