[project]
name = "divina-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "numpy>=2.3.5",
    "opencv-contrib-python>=4.13.0.92",
    "pandas>=3.0.1",
    "roboflow>=1.2.15",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
